Insurancev3/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: insurancev3
  name: insurancev3
spec:
  ports:
    -
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: insurancev3
